--- a/src/WtBtCore/WtBtCore.vcxproj
+++ b/src/WtBtCore/WtBtCore.vcxproj
@@ -135,6 +135,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>D:\OpenSource\spdlog-1.9.2\include;D:\OpenSource\rapidjson-1.1.0\include;D:\software\boost_1_72_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
